[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Player/_Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/_Scenes/PlayerBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Player/_Sounds/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Player/_Sounds/move.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Player/_Graphics/particles.png" type="Texture" id=5]
[ext_resource path="res://Assets/Player/_Graphics/playership.png" type="Texture" id=6]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 0.0177515, 0.988166, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.96875, 0.384745, 0.0681152, 1, 1, 0.117188, 0, 1, 1, 1, 1, 1 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[sub_resource type="Curve" id=3]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.317383 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]

flags = 4
gradient = SubResource( 5 )
width = 2048

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 10
trail_color_modifier = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 5.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( -2000, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 2.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 10.0
radial_accel_random = 0.0
tangential_accel = 1.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 20.0
angle_random = 1.0
scale = 50.0
scale_random = 0.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.1
anim_offset_random = 1.0
anim_loop = false
_sections_unfolded = [ "Angle", "Animation", "Color", "Damping", "Emission Shape", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Resource", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = PoolVector2Array( 0, -10, 8.66025, 5, -8.66025, 5 )

[node name="Player" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
GUI = null
minerals = null
fuel = null
fuel_capacity = null
mining_time = 0
bullet_speed = 750
damage = 50
engine_acceleration = 200
max_speed = 1000
max_health = null
friction = null
fuel_value = null
collision_damage = 10
Bullet = ExtResource( 2 )
shoot_sound = ExtResource( 3 )
move_sound = ExtResource( 4 )

[node name="Particles2D" type="Particles2D" parent="." index="0"]

position = Vector2( -33.7569, -0.0311241 )
scale = Vector2( 0.005, 0.005 )
emitting = true
amount = 5
lifetime = 3.0
one_shot = false
preprocess = 0.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 5 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Pause", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Camera" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( -5.15636, -0.31697 )
rotation = 1.5708
scale = Vector2( 4.26913, 4.99802 )
shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="ShootTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="ShootSoundPlayer" type="AudioStreamPlayer2D" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="MoveSoundPlayer" type="AudioStreamPlayer2D" parent="." index="6"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_Player_area_exited"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]


